# NLP_groupe6

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.light  README_TEST.md  Rapport_NLP_Wikipedia.md  Readme.md  app.py  civilisations_afrique_precoloniale.csv  create_db.py  deploy-gke.sh  deploy-k8s.sh  docker-compose.yml  mlflow.db  pyproject.prod.toml  pyproject.toml  question.csv  rendu_kube.md  requirements.txt  retrieve_wikipedia_pages.py  run_experiments.py
k8s/: chromadb.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  streamlit-app.yaml
results/: retrieval_results_20260108_021603.json  test2_chunk_sizes_20260108_021603.csv  test3_overlap_20260108_021603.csv  test4_small2big_20260108_021603.csv  test5_metadata_20260108_021603.csv
src_rag/: evaluate.py  evaluate_wikipedia.py  models.py  vector_store.py
terraform/: README.md
wikipedia_pages/: Berghouata.txt  Blemmyes.txt  Bonoman.txt  Califat de Sokoto.txt  Califat fatimide.txt  Civilisation Sao.txt  Civilisation carthaginoise.txt  Civilisation nok.txt  Confédération Mthethwa.txt  Confédération aro.txt  Derviches Dhulbahante.txt  Deuxième Maurétanie.txt  Djolof.txt  Dynastie Alaouite.txt  Dynastie Idrisside.txt  Dynastie Khourassanides (1).txt  Dynastie Khourassanides (2).txt  Dynastie Saadienne.txt  Dynastie Senussi.txt  Dynastie Wattasside.txt  Dynastie Ziride.txt  Dynastie ayyoubide.txt  Dynastie de Méhémet Ali.txt  Dynastie des Almoravides.txt  Empire Wolof.txt  Empire ashanti.txt  Empire d'Ife.txt  Empire d'Oyo.txt  Empire du Ghana.txt  (+103 more)
(+146 files in other folders)
