[project]
name = "nlp-esgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "evaluate>=0.4.5",
    "flagembedding>=1.3.5",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "openai>=1.105.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seqeval>=1.2.2",
    "torch>=2.8.0",
    "transformers[torch]>=4.56.0",
    "requests>=2.28.0",
    "mlflow>=3.1.0",
    "tiktoken>=0.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
